# it30-image-process

./: .babelrc  .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  webpack.config.js
assets/: scene.gltf
docs/: index.html
docs/js/: 0.chunk.js  2.chunk.js  3.chunk.js  main.bundle.js  polyfill.bundle.js
js/: 0.chunk.worker.js  1.chunk.js  2.chunk.js  3.chunk.js  4.chunk.js  5.chunk.js  main.bundle.js  polyfill.bundle.js
lib/: barrage.js  filter.js  utils.js
src/: App.vue  main.js  router.js
src/components/: DrawCanvas.vue  SideNav.vue
src/components/DrawCanvas/: index.vue  style.scss  template.html
src/components/ImageInfo/: index.vue  style.scss  template.html
src/components/ImageSlider/: index.vue  style.scss  template.html
src/components/Slider/: index.vue  template.html
src/lib/: barrage.js  canvas.worker.js  filter.js  utils.js
src/store/: index.js
src/views/: Index.vue
src/views/Ar/: index.vue  style.scss  template.html
src/views/CssFilters/: index.vue  style.scss  template.html
src/views/HandTrack/: index.vue  style.scss  template.html
src/views/ImageEditor/: index.vue  style.scss  template.html
src/views/Video/: index.vue  style.scss  template.html
wasm/: Cargo.toml
wasm/src/: lib.rs
