[package]
name = "wasm"
version = "0.1.0"
authors = ["lb01910483 <lb01910483@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'console'
]


[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# 下面的設定會跟最後的效能有關係
opt-level = 3
lto = true
panic = 'abort'
